--- a/normalization-pipeline.ipynb
+++ b/normalization-pipeline.ipynb
@@ -240,8 +240,17 @@
     "bin_counts = 1024\n",
     "xlim= [(300, 700) for _ in range(19)]\n",
     "\n",
-    "# Normalize and plot distributions for each key\n",
-    "shifts_fft_dict = normalize_and_plot_distributions(results_hist, marker_list, sample_names, reference_sample, bin_counts, xlim)"
+    "\n",
+    "shifts_fft_dict = normalize_and_plot_distributions(\n",
+    "    results_hist=results_hist, \n",
+    "    keys=marker_list, \n",
+    "    sample_names=sample_names, \n",
+    "    reference_sample=reference_sample, \n",
+    "    num_bins=bin_counts, \n",
+    "    plot_dist=True,\n",
+    "    output_directory=output_directory\n",
+    ")\n",
+    "\n"
    ]
   },
   {
@@ -267,16 +276,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Calculate shift in log pixels\n",
-    "shift_in_log_pixels_dict = calculate_shift_in_log_pixels(results_range, marker_list, bin_counts, shifts_fft_dict)\n",
-    "\n",
     "output_directory = \"/home/groups/ChangLab/wangmar/shift-panel-reduction/shift-panel-reduction-main/landmark_normalization/cycif-normalization-pipeline\"\n",
     "reference_sample = \"CRC01\"\n",
     "reference_index = sample_names.index(reference_sample)\n",
     "\n",
-    "# save stacked images\n",
-    "process_and_stack_images(crc_dask_arrays, marker_list, shift_in_log_pixels_dict, reference_index, bin_counts, plot_dist=True, output_directory)"
+    "shift_in_log_pixels_dict = calculate_shift_in_log_pixels(\n",
+    "    results_range=results_range,\n",
+    "    keys=marker_list,\n",
+    "    num_edges=bin_counts,\n",
+    "    shifts_fft_dict=shifts_fft_dict\n",
+    ")\n",
+    "\n",
+    "process_and_stack_images(\n",
+    "    crc_dask_arrays=crc_dask_arrays,\n",
+    "    marker_dict=marker_list,\n",
+    "    shift_in_log_pixels_dict=shift_in_log_pixels_dict,\n",
+    "    reference_index=reference_index,\n",
+    "    num_bins=bin_counts,\n",
+    "    plot_dist=True,\n",
+    "    output_directory=output_directory\n",
+    ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb8ebe22-5c8d-4610-894b-5759ae23de7b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1665f099-f757-4556-a654-0360be3a229b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
